--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	                        <h1 class="hero-title mt-0">Landing template for Lacerba</h1>
 	                        <p class="hero-paragraph">Our landing page template works on all devices, so you only have to set it up once, and get beautiful results forever.</p>
 	                        <div class="hero-cta">
-								<a class="button button-primary button-wide-mobile" href="https://lacerba.activehosted.com/f/3">Get early access</a>
+								<a class="button button-primary button-wide-mobile" href="https://lacerba71347.activehosted.com/f/1">Get early access</a>
 							</div>
 						</div>
 						<div class="mockup-container">
@@ -193,7 +193,7 @@
 			</script>
 
 
-			
+
         </footer>
     </div>
 
