--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                 <div class="container-sm">
                     <div class="hero-inner">
 						<div class="hero-copy">
-	                        <h1 class="hero-title mt-0">Landing template for Lacerba</h1>
-	                        <p class="hero-paragraph">Our landing page template works on all devices, so you only have to set it up once, and get beautiful results forever.</p>
+	                        <h1 class="hero-title mt-0">La formazione digitale... sempre con te!</h1>
+	                        <p class="hero-paragraph">Scopri la nostra offerta formativa, pratica e veloce, sul tuo smartphone </p>
 	                        <div class="hero-cta">
-								<a class="button button-primary button-wide-mobile" href="https://lacerba71347.activehosted.com/f/1">Get early access</a>
+								<a class="button button-primary button-wide-mobile" href="https://lacerba71347.activehosted.com/f/1">Richiedi la demo</a>
 							</div>
 						</div>
 						<div class="mockup-container">
