--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 									<img class="device-mockup is-revealing" src="dist/images/iphone-feature-01.png" alt="iPhone Feature 01">
 								</div>
 								<div class="feature-extended-body is-revealing">
-									<h3 class="mt-0 mb-16">Amazing features, coming soon.</h3>
-									<p class="m-0">Quam quisque id diam vel quam elementum pulvinar. Ut etiam sit amet nisl purus in mollis nunc. Odio morbi quis commodo odio aenean sed adipiscing diam donec.</p>
+									<h3 class="mt-0 mb-16">Lezioni in HD</h3>
+									<p class="m-0">I video sono registrati interamente in alta qualità, per  garantirti la migliore esperienza di studio</p>
 								</div>
 							</div>
 							<div class="feature-extended">
@@ -74,8 +74,8 @@
 									<img class="device-mockup is-revealing" src="dist/images/iphone-feature-02.png" alt="iPhone Feature 02">
 								</div>
 								<div class="feature-extended-body is-revealing">
-									<h3 class="mt-0 mb-16">Amazing features, coming soon.</h3>
-									<p class="m-0">Quam quisque id diam vel quam elementum pulvinar. Ut etiam sit amet nisl purus in mollis nunc. Odio morbi quis commodo odio aenean sed adipiscing diam donec.</p>
+									<h3 class="mt-0 mb-16">Moduli estremamente pratici</h3>
+									<p class="m-0">Segui le lezioni in maniera efficace e passo passo grazie a video brevi e operativi, che ti aiuteranno ad apprendere secondo i tuoi tempi</p>
 								</div>
 							</div>
 							<div class="feature-extended">
@@ -86,8 +86,8 @@
 									<img class="device-mockup is-revealing" src="dist/images/iphone-feature-03.png" alt="iPhone Feature 03">
 								</div>
 								<div class="feature-extended-body is-revealing">
-									<h3 class="mt-0 mb-16">Amazing features, coming soon.</h3>
-									<p class="m-0">Quam quisque id diam vel quam elementum pulvinar. Ut etiam sit amet nisl purus in mollis nunc. Odio morbi quis commodo odio aenean sed adipiscing diam donec.</p>
+									<h3 class="mt-0 mb-16">Professionisti selezionati</h3>
+									<p class="m-0">Selezioniamo solo i migliori professionsiti presenti sul mercato che lavorano nel digitale ogni giorno e che saranno in grado di spiegarti esattamente come lavorare nella disciplina che insegnano</p>
 								</div>
 							</div>
 							<div class="feature-extended">
@@ -98,8 +98,8 @@
 									<img class="device-mockup is-revealing" src="dist/images/iphone-feature-04.png" alt="iPhone Feature 04">
 								</div>
 								<div class="feature-extended-body is-revealing">
-									<h3 class="mt-0 mb-16">Amazing features, coming soon.</h3>
-									<p class="m-0">Quam quisque id diam vel quam elementum pulvinar. Ut etiam sit amet nisl purus in mollis nunc. Odio morbi quis commodo odio aenean sed adipiscing diam donec.</p>
+									<h3 class="mt-0 mb-16"></h3>
+									<p class="m-0"></p>
 								</div>
 							</div>
 						</div>
@@ -117,10 +117,10 @@
 					<div class="container-sm">
 						<div class="cta-inner section-inner">
 							<div class="cta-header text-center">
-								<h2 class="section-title mt-0">Stay in the know</h2>
-								<p class="section-paragraph">Lorem ipsum is common placeholder text used to demonstrate the graphic elements of a document or visual presentation.</p>
+								<h2 class="section-title mt-0">Rimani aggiornato</h2>
+								<p class="section-paragraph">Ti informeremo non appena il prodotto sarà online, riceverai le informazioni necessarie, assistenza dedicata, oltre ad esclusivi sconti per te!</p>
 								<div class="cta-cta">
-									<a class="button button-primary button-wide-mobile" href="#">Get early access</a>
+									<a class="button button-primary button-wide-mobile" href="#">Tienimi aggiornato</a>
 								</div>
 							</div>
 						</div>
@@ -137,16 +137,16 @@
 						</div>
 						<ul class="footer-links list-reset">
 							<li>
-								<a href="#">Contact</a>
+								<a href="#">Contattaci</a>
 							</li>
 							<li>
-								<a href="#">About us</a>
+								<a href="#">About</a>
 							</li>
 							<li>
 								<a href="#">FAQ's</a>
 							</li>
 							<li>
-								<a href="#">Support</a>
+								<a href="#">Hai bisogno di aiuto?</a>
 							</li>
 						</ul>
 						<ul class="footer-social-links list-reset">
