--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	                        <h1 class="hero-title mt-0">La formazione digitale... <br>sempre con te!</h1>
 	                        <p class="hero-paragraph">Scopri la nostra offerta formativa, pratica e veloce, sul tuo smartphone </p>
 	                        <div class="hero-cta">
-								<a class="button button-primary button-wide-mobile" href="">Richiedi la demo</a>
+								<a class="button button-primary button-wide-mobile" href="https://lacerba.activehosted.com/f/68">Richiedi la demo</a>
 							</div>
 						</div>
 						<div class="mockup-container">
